turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:18: error: not found: value doite
  doite(45)
  ^